# honey-crew

./: README.md  pyproject.toml
examples/: Game_Builder.md  Recruitment.md  Stock_Analysis.md  Surprise_Travel.md
examples/concepts/: agents.md  cli.md  collaboration.md  crews.md  flows.md  langchain-tools.md  llamaindex-tools.md  llms.md  memory.md  pipeline.md  planning.md  processes.md  tasks.md  testing.md  tools.md  training.md
src/honey/: crew.py  main.py
src/honey/config/: agents.yaml  tasks.yaml
src/honey/tools/: database_lookup_tool.py  database_tool.py  elevenlabs_tts_tool.py
